# electron-icon-builder

./: .gitignore  Cargo.toml  README.md  icon.aps  icon.cpp  icon.h  icon.rc  icon.sln  icon.ui  icon.vcxproj  icon.vcxproj.filters  main.cpp  package.json  readme.md  resource.h
.github/workflows/: release.yml
src/: build.rs  main.rs  utils.rs
src/commands/: run.ts
src/ui/: main.slint
