[package]
name = "electron-icon-builder"
version = "0.1.0"
build = "./src/build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.6.3"
slint = "0.2.4"
slint-build = "0.2.4"

[build-dependencies]
slint-build = "0.2.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
LegalCopyright = "Copyright © 2022 Hunlongyu"
