[package]
name = "electron-icon-builder"
version = "0.1.5"
build = "./src/build.rs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_image_resize = "0.9.6"
icns = "0.3.1"
image = "0.24.2"
native-dialog = "0.6.3"
slint = "0.2.4"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"

[build-dependencies]
slint-build = "0.2.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[package.metadata.winres]
LegalCopyright = "Copyright © 2022 Hunlongyu"
